--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body,
 html {
   padding: 0px;
   margin: 0px;
-  overflow: hidden;
   font-family: "Roboto", sans-serif;
 }
 
@@ -13,7 +12,7 @@ html {
   z-index: -1;
 }
 
-/* Navigation Bar */
+/* "NavIgatIOn BAr" */
 #nav-container {
   display: flex;
   justify-content: center;
@@ -35,10 +34,30 @@ html {
 #temp {
   padding: 10%;
 }
+
+/* pop/hover element(s) & section (guidance from CHATGPT) */
+.popup {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  z-index: 1;
+}
+
+.hover-element {
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
 /* Body Portion */
 #flex-container {
   display: flex;
+  position: relative;
   padding: 0px;
+  padding-bottom: 40px;
   margin-left: 5%;
   margin-right: 5%;
   text-align: center;
@@ -90,29 +109,10 @@ html {
   transform: scale(1.1);
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  pointer-events: none;
-  z-index: 1;
-  display: none;
-}
-
-/* .darken-background {
-  background-color: rgba(0, 0, 0, 0.5);
-} */
-
-body.darken-background {
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-}
-
 .divide-bar {
   display: block;
-  padding: 50px;
+  padding: 25px;
+  color: white;
   background-color: #ccc;
 }
 
