--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,23 @@ p {
 }
 
 /* Creates a Border and Separate Sections for Buttons */
+
+#creation process-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.How AI Technology Came to Life (The Creation Process)-section {
+  background-color: var(--clr);
+  color: white;
+  display: flex;
+  width: 80%;
+  height: 175px;
+  margin: 5px;
+  transform: translateX(400%);
+  transition: transform 0.8s ease;
+  border: 1px red solid;
+}
+
