--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ p {
 
 /* Creates a Border and Separate Sections for Buttons */
 
-#creation process-container {
+#How AI Technology Came to Life (The Creation Process)-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
