--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,15 @@ p {
   margin: 5px;
   cursor: pointer;
 }
+
+.p {
+   background-color: var(--clr);
+  color: white;
+  display: flex;
+  width: 80%;
+  height: 175px;
+  margin: 5px;
+  transform: translateX(400%);
+  transition: transform 0.8s ease;
+  border: 1px red solid;
+}  
