--- a/css/style.css
+++ b/css/style.css
@@ -234,4 +234,13 @@ p {
   cursor: pointer;
 }
 
+#types-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
  
