--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,39 @@ p {
   align-items: center;
 }
 
+.types-section {
+  background-color: var(--clr);
+  color: white;
+  display: flex;
+  width: 80%;
+  height: 175px;
+  margin: 5px;
+  transform: translateX(400%);
+  transition: transform 0.8s ease;
+  border: 1px red solid;
+}
+
+.types-section:nth-of-type(even) {
+  transform: translateX(-400%);
+  width: 80%;
+  font-size: 1.5vw;
+}
+
+.types-section:not(:first-of-type):nth-of-type(odd) {
+  transform: translateX(400%);
+  width: 80%;
+  font-size: 1.5vw;
+}
+
+#types-start {
+  font-size: 4vw;
+  font-weight: bold;
+}
+
+.slide-left {
+  transform: translateX(-200%);
+}
+
 
 
  
