--- a/css/style.css
+++ b/css/style.css
@@ -260,13 +260,12 @@ p {
   margin: 5px;
   cursor: pointer;
 }
+
 /* k section */
-.sub-title h2 {
+.sub-title {
   color: white;
+  border: 1px red solid;
 }
-
-
-
 
 
 #types-start {
