--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,11 @@ p {
   border: 1px red solid;
 }
 
+.sub-title p {
+  color: white;
+  border: 1px red solid;
+}
+
 
 #types-start {
   font-size: 4vw;
