--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,17 @@ p {
   margin: auto;
 }
 
+h2{
+    background-color: rgb(204, 204, 204, .5);  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border: 5px dashed;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+
 #types-start {
   font-size: 4vw;
   font-weight: bold;
