--- a/css/style.css
+++ b/css/style.css
@@ -287,21 +287,74 @@ p {
   cursor: pointer;
 }
 
-/* k section */
+
 .sub-title {
   color: white;
   background-color: rgb(204, 204, 204, .5);
   border: 1px red solid;
   text-align: center;
   font-size: 120%;
-  border: 5px dashed;
   border-radius: 7px;
   width: 80%;
   display: block;
   margin: auto;
 }
 
-h2{  
+h2 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h3 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h4 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h5 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h6 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h7 {  
+    border: 1px red solid; 
+    text-align: center; 
+    font-size: 120%;
+    border-style: solid;
+    border-radius: 7px;
+    width: 80%    
+  }
+
+h8 {  
     border: 1px red solid; 
     text-align: center; 
     font-size: 120%;
