--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ p {
 }
 
 h2 {
+  border: 1px red solid;
   background-color: rgb(204, 204, 204, 0.5); 
   text-align: center;
   font-size: 120%;
