--- a/css/style.css
+++ b/css/style.css
@@ -259,63 +259,10 @@ h2 {
   background-color: rgb(204, 204, 204, 0.5); 
   text-align: center;
   font-size: 120%;
-  border-style: solid;
+  border-style: 3px solid;
   border-radius: 7px;
   width: 80%;
-}
-
-h3 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
-}
-
-h4 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
-}
-
-h5 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
-}
-
-h6 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
-}
-
-h7 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
-}
-
-h8 {
-  border: 1px red solid;
-  text-align: center;
-  font-size: 120%;
-  border-style: solid;
-  border-radius: 7px;
-  width: 80%;
+  margin: auto;
 }
 
 #types-start {
